--- a/src/lab1tp6/GestorFrame.form
+++ b/src/lab1tp6/GestorFrame.form
@@ -50,6 +50,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jmiPorNombre">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Verdana" size="12" style="0"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Por Nombre"/>
               </Properties>
               <Events>
